Added basic styles, controls, and preview image

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -3,3 +3,26 @@
  *
  * Replace them with your own styles or remove the file completely.
  */
+
+.dfb-media-uploader {
+  width: 200px;
+}
+
+.dfb-replace-image-btn {
+  margin-right: 10px;
+}
+
+.dfb-background-btns {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.dfb-label {
+  margin: 0 0 10px;
+}
+
+.dfb-help-text {
+  font-size: 12px;
+  font-style: normal;
+  color: rgb(117, 117, 117);
+}
