--- a/src/editor.scss
+++ b/src/editor.scss
@@ -1,8 +1,8 @@
-/**
- * The following styles get applied inside the editor only.
- *
- * Replace them with your own styles or remove the file completely.
- */
+//---------------------------------
+// Editor styles! ✍️
+//---------------------------------
+
+$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 
 .dfb-media-uploader {
   width: 200px;
@@ -32,5 +32,71 @@
   margin: 0 0 10px;
   .components-circular-option-picker .components-circular-option-picker__swatches {
 	gap: 8px;
+  }
+}
+
+
+// --------------------------------
+// Stripe Connect Wrap
+// --------------------------------
+
+#dfb-stripe-connect-wrap {
+  font-family: $font-family;
+  background: #F6F8FA;
+  border: 1px solid #EAEDF0;
+  display: flex;
+  align-items: center;
+  padding: 30px;
+  border-radius: 6px;
+  text-align: center;
+
+  .dfb-stripe-connect-wrap-inner {
+	margin: 0 auto 2rem;
+  }
+
+  .dfb-welcome-wave {
+	font-size: 40px;
+	margin: 0 0 10px;
+	display: block;
+	line-height: 1;
+  }
+
+  h2 {
+	font-weight: 500;
+	margin: 0 0 0.4rem;
+  }
+
+  p {
+
+  }
+
+}
+
+// --------------------------------
+// Connect Button
+// --------------------------------
+.dfb-stripe-connect {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #6772e5;
+  color: #fff;
+  padding: 6px 24px;
+  border-radius: 5px;
+  font-size: 16px;
+  text-decoration: none;
+  letter-spacing: 0.6px;
+  transition: 0.3s ease all;
+  width: 200px;
+
+  .stripe-logo {
+	padding: 2px 10px 0 0;
+  }
+
+  &:hover,
+  &:focus,
+  &:active {
+	background: #3f4ddf;
+	color: #fff;
   }
 }
