--- a/src/editor.scss
+++ b/src/editor.scss
@@ -5,34 +5,35 @@
 $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 
 .dfb-media-uploader {
-  width: 200px;
+    width: 200px;
 }
 
 .dfb-replace-image-btn {
-  margin-right: 10px;
+    margin-right: 10px;
 }
 
 .dfb-background-btns {
-  margin-top: 10px;
-  margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .dfb-label {
-  margin: 0 0 10px;
-  display: block;
+    margin: 0 0 10px;
+    display: block;
 }
 
 .dfb-help-text {
-  font-size: 12px;
-  font-style: normal;
-  color: rgb(117, 117, 117);
+    font-size: 12px;
+    font-style: normal;
+    color: rgb(117, 117, 117);
 }
 
 .dfb-color-picker {
-  margin: 0 0 10px;
-  .components-circular-option-picker .components-circular-option-picker__swatches {
-	gap: 8px;
-  }
+    margin: 0 0 10px;
+
+    .components-circular-option-picker .components-circular-option-picker__swatches {
+        gap: 8px;
+    }
 }
 
 
@@ -41,34 +42,35 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
 // --------------------------------
 
 #dfb-stripe-connect-wrap {
-  font-family: $font-family;
-  background: #F6F8FA;
-  border: 1px solid #EAEDF0;
-  display: flex;
-  align-items: center;
-  padding: 30px;
-  border-radius: 6px;
-  text-align: center;
+    font-family: $font-family;
+    background: #F6F8FA;
+    border: 1px solid #EAEDF0;
+    display: flex;
+    align-items: center;
+    padding: 30px;
+    border-radius: 6px;
+    text-align: center;
+    width: 100%;
 
-  .dfb-stripe-connect-wrap-inner {
-	margin: 0 auto 2rem;
-  }
+    .dfb-stripe-connect-wrap-inner {
+        margin: 0 auto 2rem;
+    }
 
-  .dfb-welcome-wave {
-	font-size: 40px;
-	margin: 0 0 10px;
-	display: block;
-	line-height: 1;
-  }
+    .dfb-welcome-wave {
+        font-size: 40px;
+        margin: 0 0 10px;
+        display: block;
+        line-height: 1;
+    }
 
-  h2 {
-	font-weight: 500;
-	margin: 0 0 0.4rem;
-  }
+    h2 {
+        font-weight: 500;
+        margin: 0 0 0.4rem;
+    }
 
-  p {
+    p {
 
-  }
+    }
 
 }
 
@@ -76,27 +78,27 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
 // Connect Button
 // --------------------------------
 .dfb-stripe-connect {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #6772e5;
-  color: #fff;
-  padding: 6px 24px;
-  border-radius: 5px;
-  font-size: 16px;
-  text-decoration: none;
-  letter-spacing: 0.6px;
-  transition: 0.3s ease all;
-  width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #6772e5;
+    color: #fff;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-size: 15px;
+    text-decoration: none;
+    letter-spacing: 0.6px;
+    transition: 0.3s ease all;
+    width: 200px;
 
-  .stripe-logo {
-	padding: 2px 10px 0 0;
-  }
+    .stripe-logo {
+        padding: 2px 10px 0 0;
+    }
 
-  &:hover,
-  &:focus,
-  &:active {
-	background: #3f4ddf;
-	color: #fff;
-  }
+    &:hover,
+    &:focus,
+    &:active {
+        background: #3f4ddf;
+        color: #fff;
+    }
 }
