--- a/src/editor.scss
+++ b/src/editor.scss
@@ -102,3 +102,79 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
         color: #fff;
     }
 }
+
+// --------------------------------
+// Connected Element
+// --------------------------------
+.dfb-connected-wrap {
+    position: relative;
+    font-family: $font-family;
+    background: #F6F8FA;
+    border: 1px solid #EAEDF0;
+    height: 50px;
+    padding: 0 25px;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+}
+
+.dfb-connected-circle-wrap {
+    width: 16px;
+    height: 16px;
+    margin: 0 10px 0 0;
+}
+
+.dfb-connected-circle {
+    position: absolute;
+    width: 16px;
+    height: 16px;
+
+    &:before {
+        content: '';
+        position: relative;
+        display: block;
+        width: 200%;
+        height: 200%;
+        box-sizing: border-box;
+        margin-left: -50%;
+        margin-top: -50%;
+        border-radius: 45px;
+        background-color: #28A745;
+        animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
+    }
+
+    &:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-color: #28A745;
+        border-radius: 15px;
+        box-shadow: 0 0 8px rgba(0, 0, 0, .3);
+        animation: pulse-dot 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -.4s infinite;
+    }
+}
+
+@keyframes pulse-ring {
+    0% {
+        transform: scale(.33);
+    }
+    80%, 100% {
+        opacity: 0;
+    }
+}
+
+@keyframes pulse-dot {
+    0% {
+        transform: scale(.8);
+    }
+    50% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(.8);
+    }
+}
