--- a/src/editor.scss
+++ b/src/editor.scss
@@ -112,6 +112,7 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
     background: #F6F8FA;
     border: 1px solid #EAEDF0;
     height: 50px;
+    margin: 10px 0 15px;
     padding: 0 25px;
     display: flex;
     align-items: center;
