--- a/src/editor.scss
+++ b/src/editor.scss
@@ -159,6 +159,15 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
     }
 }
 
+.dfb-stripe-message {
+    text-align: center;
+    p {
+        margin: 20px 0;
+        font-style: italic;
+        color: #656D76;
+    }
+}
+
 @keyframes pulse-ring {
     0% {
         transform: scale(.33);
