--- a/src/editor.scss
+++ b/src/editor.scss
@@ -51,6 +51,7 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
     border-radius: 6px;
     text-align: center;
     width: 100%;
+    margin: 0 0 30px;
 
     .dfb-stripe-connect-wrap-inner {
         margin: 0 auto 2rem;
