--- a/src/editor.scss
+++ b/src/editor.scss
@@ -190,3 +190,12 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
         transform: scale(.8);
     }
 }
+
+// --------------------------------
+// Lottie Connected Animation
+// --------------------------------
+#lottie {
+    position: absolute;
+    top: 0;
+    left:0;
+}
