--- a/src/editor.scss
+++ b/src/editor.scss
@@ -194,8 +194,22 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
 // --------------------------------
 // Lottie Connected Animation
 // --------------------------------
-#lottie {
+#dfb-connected-lottie {
     position: absolute;
-    top: 0;
-    left:0;
+    top: -50%;
+    left: 0;
+    right: 0;
+}
+
+.dfb-lottie-connected-text {
+    max-width: 650px;
+    margin: 0 auto 30px;
+    background: #FFF;
+    border-radius: 8px;
+    padding: 15px;
+    text-align: center;
+    font-size: 40px;
+    z-index: 9999;
+    box-shadow: 0 0 3px #00000045;
+    position: relative;
 }
