--- a/src/editor.scss
+++ b/src/editor.scss
@@ -76,6 +76,68 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
 }
 
 // --------------------------------
+// Disconnect Button & Modal
+// --------------------------------
+
+.dfb-stripe-disconnect {
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: 0.5rem;
+
+    &__link {
+        display: flex;
+        column-gap: 0.3rem;
+        font-size: 13px;
+        color: #AAA9A9;
+        align-items: center;
+
+        .dashicon {
+            height: 13px;
+            font-size: 13px;
+        }
+
+        button.components-button.is-link {
+            color: #AAA9A9;
+            text-decoration: none;
+        }
+    }
+}
+
+.dfb-stripe-disconnect-modal {
+    max-width: 34rem;
+
+    .components-modal__icon-container {
+        line-height: 0;
+    }
+
+    .components-modal__header-heading-container {
+        column-gap: 0.5rem;
+    }
+
+    p {
+        margin: 0;
+    }
+
+    &__form {
+        display: flex;
+        flex-direction: column;
+        row-gap: 2rem;
+    }
+
+    &__error {
+        color: #D0021B;
+    }
+
+    &__buttons {
+        display: flex;
+        column-gap: 1rem;
+
+        padding-top: 1rem;
+        border-top: 1px solid #eaeaea;
+    }
+}
+
+// --------------------------------
 // Connect Button
 // --------------------------------
 .dfb-stripe-connect {
