--- a/src/editor.scss
+++ b/src/editor.scss
@@ -91,6 +91,10 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
         color: #AAA9A9;
         align-items: center;
 
+        &:hover {
+            color: #333;
+        }
+
         .dashicon {
             height: 13px;
             font-size: 13px;
@@ -99,6 +103,11 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
         button.components-button.is-link {
             color: #AAA9A9;
             text-decoration: none;
+
+            &:hover {
+                color: #333;
+                text-decoration: underline;
+            }
         }
     }
 }
@@ -131,7 +140,6 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
     &__buttons {
         display: flex;
         column-gap: 1rem;
-
         padding-top: 1rem;
         border-top: 1px solid #eaeaea;
     }
