--- a/src/editor.scss
+++ b/src/editor.scss
@@ -92,7 +92,7 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
         align-items: center;
 
         &:hover {
-            color: #333;
+            color: red;
         }
 
         .dashicon {
@@ -105,7 +105,7 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
             text-decoration: none;
 
             &:hover {
-                color: #333;
+                color: red;
                 text-decoration: underline;
             }
         }
