--- a/src/editor.scss
+++ b/src/editor.scss
@@ -36,7 +36,14 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
     }
 }
 
+.dfb-stripe-live-mode-toggle {
 
+    .components-external-link {
+        display: inline-block;
+        margin: 10px 0 20px;
+    }
+
+}
 // --------------------------------
 // Stripe Connect Wrap
 // --------------------------------
