--- a/src/editor.scss
+++ b/src/editor.scss
@@ -239,6 +239,7 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
 
 .dfb-stripe-message {
     text-align: center;
+    margin: 30px 0 0;
 
     p {
         margin: 20px 0;
