--- a/src/components/AmountLevels/styles.module.scss
+++ b/src/components/AmountLevels/styles.module.scss
@@ -2,10 +2,20 @@
     column-gap: 1rem;
 }
 
+.amountLevelsWrap {
+    margin-top: 10px;
+}
+
 .repeatableControl {
     margin-bottom: 0 !important;
 }
 
+.removeAmountLevel {
+    padding-left:4px !important;
+    padding-right:4px !important;
+}
+
 .repeatableAddButton {
-    margin-top: 0.5rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
