--- a/src/editor.scss
+++ b/src/editor.scss
@@ -44,6 +44,7 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
     }
 
 }
+
 // --------------------------------
 // Stripe Connect Wrap
 // --------------------------------
@@ -182,6 +183,33 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
 }
 
 // --------------------------------
+// Help
+// --------------------------------
+
+.dfb-docs-support-panel-row {
+    background: #F6F8FA;
+    border: 1px solid #EAEDF0;
+    display: flex;
+    padding: 8px 10px;
+    align-items: center;
+    border-radius: 6px;
+    width: 100%;
+
+    p {
+        margin: 0;
+        padding: 0;
+        line-height: 18px;
+    }
+    span {
+        text-transform: uppercase;
+    }
+
+    &__icon {
+        margin-right: 10px;
+    }
+}
+
+// --------------------------------
 // Connected Element
 // --------------------------------
 .dfb-connected-wrap {
@@ -194,7 +222,7 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
     padding: 0 25px;
     display: flex;
     align-items: center;
-    border-radius: 5px;
+    border-radius: 6px;
 }
 
 .dfb-connected-circle-wrap {
