--- a/src/editor.scss
+++ b/src/editor.scss
@@ -184,6 +184,14 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, s
 }
 
 // --------------------------------
+// ReCAPTCHA
+// --------------------------------
+
+.dfb-recaptcha-options {
+    display: block;
+}
+
+// --------------------------------
 // Help
 // --------------------------------
 
