--- a/src/editor.scss
+++ b/src/editor.scss
@@ -199,7 +199,7 @@ $color-container-border: #EAEDF0;
 }
 
 // --------------------------------
-// ReCAPTCHA
+// reCAPTCHA
 // --------------------------------
 
 .dfb-recaptcha-options {
